# current

./: .gitignore  README.md  pyproject.toml  token.pickle
current/api/: main.py  models.py
current/cal/: __init__.py  main.py  spoof.py
current/static/: current.css
current/static/templates/: base.html  events.html  request.html
