[tool.poetry]
name = "current"
version = "0.1.0"
description = ""
authors = ["George L. F. Harris <glfharris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
gcsa = "^2.2.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
